# python-google-map-data-scraper

./: .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt
data/: scraped.db
database/: db.py
scraper/: __init__.py  maps_scraper.py
static/css/: style.css
static/js/: main.js
templates/: index.html
