[project]
name = "gmaps-scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "certifi>=2026.2.25",
    "charset-normalizer>=3.4.6",
    "chromium>=0.0.0",
    "click>=8.3.1",
    "dotenv>=0.9.9",
    "flask>=3.1.3",
    "idna>=3.11",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "pillow>=12.1.1",
    "pip>=26.0.1",
    "playwright>=1.58.0",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.2.2",
    "pytz>=2026.1.post1",
    "reportlab>=4.4.10",
    "requests>=2.32.5",
    "six>=1.17.0",
    "typing-extensions>=4.15.0",
    "urllib3>=2.6.3",
    "werkzeug>=3.1.6",
    "xlsxwriter>=3.2.9",
]
